--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Matching</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
