--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <option value="7">7</option>
                 <option value="8">8</option>
             </select>
+            <h2>#Capacity</h2>
+            <select id="seller-capacity">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
+            </select>
             <div class="seller-container">
                 <div class="cell-container">
                     <div class="cell-top">Sellers</div>
@@ -40,6 +45,11 @@
                 <option value="6">6</option>
                 <option value="7">7</option>
                 <option value="8">8</option>
+            </select>
+            <h2>#Capacity</h2>
+            <select id="buyer-capacity">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
             </select>
             <div class="buyer-container">
                 <div class="cell-container">
